--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "seekstorm"
-version = "0.1.8"
+version = "0.1.9"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
-description = """Search engine library"""
+description = """Search engine library & multi-tenancy server"""
 documentation = "https://docs.rs/seekstorm/"
 homepage = "https://seekstorm.com"
 repository = "https://github.com/SeekStorm/SeekStorm"
@@ -28,7 +28,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 derivative = "2.2.0"
 tokio = { version = "1.36.0", features = ["full"] }
-base64 = "0.21.7"
+base64 = "0.22.0"
 num-format = "0.4.4"
 ahash = "0.8.11"
 rand = "0.8.5"
@@ -43,10 +43,10 @@ hyper = { version = "0.14.28", features = ["full"] }
 url = "2.5.0"
 sha2 = "0.10.8"
 itertools = "0.12.1"
-async-recursion = "1.0.5"
+async-recursion = "1.1.0"
 zstd = "0.13.0"
 rayon = "1.9.0"
-aho-corasick = "1.1.2"
+aho-corasick = "1.1.3"
 smallvec = "1.13.1"
 memmap2 = "0.9.4"
 get-size = { version = "0.1.4", features = ["derive"] }
