--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,7 +2,4 @@
 rustflags = ["-C", "target-cpu=native"]
 
 [target.aarch64-apple-darwin]
-rustflags = [
-    "-C",
-    "debug-assertions=false",
-]
+rustflags = ["-C", "debug-assertions=false"]
