--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "0.1.18"
+version = "0.2.0"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -23,11 +23,11 @@ path = "src/seekstorm_server/main.rs"
 
 [dependencies]
 crossbeam-channel = "0.5.13"
-ctrlc = "3.4.4"
-serde = { version = "1.0.204", features = ["derive"] }
-serde_json = "1.0.120"
+ctrlc = "3.4.5"
+serde = { version = "1.0.208", features = ["derive"] }
+serde_json = "1.0.125"
 derivative = "2.2.0"
-tokio = { version = "1.38.1", features = ["full"] }
+tokio = { version = "1.39.3", features = ["full"] }
 base64 = "0.22.1"
 num-format = "0.4.4"
 ahash = "0.8.11"
@@ -36,7 +36,7 @@ futures = "0.3.30"
 num = "0.4.3"
 num-derive = "0.4.2"
 num-traits = "0.2.19"
-regex = "1.10.5"
+regex = "1.10.6"
 lazy_static = "1.5.0"
 hyper = { version = "0.14.30", features = ["full"] }
 url = "2.5.2"
@@ -49,6 +49,7 @@ aho-corasick = "1.1.3"
 smallvec = "1.13.2"
 memmap2 = "0.9.4"
 regex-syntax = "0.8.4"
+indexmap = { version = "2.4.0", features = ["serde"]}
 
 [profile.release]
 lto = true
