--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -50,6 +50,8 @@ smallvec = "1.13.2"
 memmap2 = "0.9.5"
 regex-syntax = "0.8.4"
 indexmap = { version = "2.5.0", features = ["serde"]}
+unicode-normalization = "0.1.24"
+finl_unicode = "1.2.0"
 
 [profile.release]
 lto = true
