--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 debug/
 target/
 .vscode/
+.idea
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
