Tokenizers now allow '+' '-' '#' : C++, C#, Top-k
- Help for server console commands added
- Added a hint of color to console messages
- Preparation for ingest of local files in PDF format (WIP).
- TokenizerType::UnicodeAlphanumeric and TokenizerType::UnicodeAlphanumericFolded now allow '+' '-' '#' in middle or end of a term: c++, c#, block-max, top-k
- query_type_default for server REST API and for library fixed
- multifield decoding case fixed: three embedded fields with each a single position
- Checks if path/file exists for ingest console command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "0.7.6"
+version = "0.8.0"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -52,6 +52,7 @@ regex-syntax = "0.8.5"
 indexmap = { version = "2.6.0", features = ["serde"]}
 unicode-normalization = "0.1.24"
 finl_unicode = "1.2.0"
+colored = "2.1.0"
 
 [profile.release]
 lto = true
