--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "0.8.0"
+version = "0.9.0"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -24,13 +24,13 @@ path = "src/seekstorm_server/main.rs"
 [dependencies]
 crossbeam-channel = "0.5.13"
 ctrlc = "3.4.5"
-serde = { version = "1.0.213", features = ["derive"] }
-serde_json = "1.0.132"
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
 derivative = "2.2.0"
-tokio = { version = "1.41.0", features = ["full"] }
+tokio = { version = "1.41.1", features = ["full"] }
 base64 = "0.22.1"
 num-format = "0.4.4"
-ahash = "0.8.11"
+ahash ={ version = "0.8.11", features = ["serde"]}
 rand = "0.8.5"
 futures = "0.3.31"
 num = "0.4.3"
@@ -39,7 +39,7 @@ num-traits = "0.2.19"
 regex = "1.11.1"
 lazy_static = "1.5.0"
 hyper = { version = "0.14.31", features = ["full"] }
-url = "2.5.2"
+url = "2.5.3"
 sha2 = "0.10.8"
 itertools = "0.13.0"
 async-recursion = "1.1.1"
@@ -51,8 +51,11 @@ memmap2 = "0.9.5"
 regex-syntax = "0.8.5"
 indexmap = { version = "2.6.0", features = ["serde"]}
 unicode-normalization = "0.1.24"
-finl_unicode = "1.2.0"
+finl_unicode = "1.3.0"
 colored = "2.1.0"
+walkdir = "2.5.0"
+pdfium-render = { version ="0.8.26",  features = ["thread_safe","sync"]}
+chrono = "0.4.38"
 
 [profile.release]
 lto = true
