--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "0.11.1"
+version = "0.12.0"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -29,7 +29,7 @@ path = "src/seekstorm_server/main.rs"
 [dependencies]
 crossbeam-channel = "0.5.13"
 ctrlc = "3.4.5"
-serde = { version = "1.0.215", features = ["derive"] }
+serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
 tokio = { version = "1.42.0", features = ["full"] }
 base64 = "0.22.1"
@@ -59,7 +59,8 @@ finl_unicode = "1.3.0"
 colored = "2.1.0"
 walkdir = "2.5.0"
 pdfium-render = { version ="0.8.26",  features = ["thread_safe","sync"]}
-chrono = "0.4.38"
+chrono = "0.4.39"
+utoipa = { version ="5.2.0",  features = ["preserve_order","preserve_path_order","yaml"]}
 
 [profile.release]
 lto = true
