Docker file and container added (#17)
https://hub.docker.com/r/wolfgarbe/seekstorm_server
`docker run -ti -p "8000:80" wolfgarbe/seekstorm_server:v0.12.2`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "0.12.2"
+version = "0.12.3"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -14,7 +14,7 @@ edition = "2021"
 exclude = ["assets/*.png","assets/*.jpg"]
 
 [features]
-# comment out entry below if you don't need Chinese word segmentation
+# comment out entry below if you don't need Chinese word segmentation or for Docker build
 default = ["zh"]
 zh = []
 
