--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2021"
 exclude = ["assets/*.png","assets/*.jpg"]
 
 [features]
-# comment out entry below if you don't need Chinese word segmentation or for Docker build
+# comment out entry below if you don't need Chinese word segmentation
 default = ["zh"]
 zh = []
 
@@ -27,7 +27,7 @@ name = "seekstorm_server"
 path = "src/seekstorm_server/main.rs"
 
 [dependencies]
-crossbeam-channel = "0.5.13"
+crossbeam-channel = "0.5.14"
 ctrlc = "3.4.5"
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
@@ -42,7 +42,7 @@ num-derive = "0.4.2"
 num-traits = "0.2.19"
 regex = "1.11.1"
 lazy_static = "1.5.0"
-hyper = { version = "1.5.1", features = ["full","server"] }
+hyper = { version = "1.5.2", features = ["full","server"] }
 hyper-util = { version ="0.1.10",  features = ["server","tokio","http1","http2"]}
 http-body-util = "0.1.2"
 url = "2.5.4"
@@ -58,11 +58,11 @@ regex-syntax = "0.8.5"
 indexmap = { version = "2.7.0", features = ["serde"]}
 unicode-normalization = "0.1.24"
 finl_unicode = "1.3.0"
-colored = "2.1.0"
+colored = "2.2.0"
 walkdir = "2.5.0"
-pdfium-render = { version ="0.8.26",  features = ["thread_safe","sync"]}
+pdfium-render = { version ="0.8.27",  features = ["thread_safe","sync"]}
 chrono = "0.4.39"
-utoipa = { version ="5.2.0",  features = ["preserve_order","preserve_path_order","yaml"]}
+utoipa = { version ="5.3.0",  features = ["preserve_order","preserve_path_order","yaml"]}
 
 [lints.rust]
 missing_docs = "warn"
