Fixed issue #32 in clear_index
- Basic tests added (issue #33): cargo test
- New method current_doc_count() returns the number of indexed documents - deleted documents.
- Fixed issue #32 in clear_index.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,3 +3,6 @@ rustflags = ["-C", "target-cpu=native"]
 
 [target.aarch64-apple-darwin]
 rustflags = ["-C", "debug-assertions=false"]
+
+[env]
+RUST_TEST_THREADS = "1"
