--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "0.12.19"
+version = "0.12.20"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -15,8 +15,9 @@ exclude = ["assets/*.png","assets/*.jpg"]
 
 [features]
 # comment out entry below if you don't need Chinese word segmentation
-default = ["zh"]
+default = ["zh","pdf"]
 zh = []
+pdf = ["pdfium-render"]
 
 [lib]
 name = "seekstorm"
@@ -61,7 +62,7 @@ unicode-normalization = "0.1.24"
 finl_unicode = "1.3.0"
 colored = "3.0.0"
 walkdir = "2.5.0"
-pdfium-render = { version ="0.8.29",  features = ["thread_safe","sync"]}
+pdfium-render = { version ="0.8.29",  features = ["thread_safe","sync"], optional = true}
 chrono = "0.4.40"
 utoipa = { version ="5.3.1",  features = ["preserve_order","preserve_path_order","yaml"]}
 
