--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "0.12.22"
+version = "0.12.23"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -37,7 +37,7 @@ tokio = { version = "1.44.2", features = ["full"] }
 base64 = "0.22.1"
 num-format = "0.4.4"
 ahash ={ version = "0.8.11", features = ["serde"]}
-rand = "0.9.0"
+rand = "0.9.1"
 futures = "0.3.31"
 num = "0.4.3"
 num-derive = "0.4.2"
@@ -62,10 +62,11 @@ unicode-normalization = "0.1.24"
 finl_unicode = "1.3.0"
 colored = "3.0.0"
 walkdir = "2.5.0"
-pdfium-render = { version ="0.8.30",  features = ["thread_safe","sync"], optional = true}
+pdfium-render = { version ="0.8.31",  features = ["thread_safe","sync"], optional = true}
 chrono = "0.4.40"
 utoipa = { version ="5.3.1",  features = ["preserve_order","preserve_path_order","yaml"]}
 rust-stemmers = "1.2.0"
+csv = "1.3.1"
 
 [lints.rust]
 missing_docs = "warn"
