--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "0.12.23"
+version = "0.12.24"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -48,7 +48,7 @@ hyper = { version = "1.6.0", features = ["full","server"] }
 hyper-util = { version ="0.1.10",  features = ["server","tokio","http1","http2"]}
 http-body-util = "0.1.2"
 url = "2.5.4"
-sha2 = "0.10.8"
+sha2 = "0.10.9"
 itertools = "0.14.0"
 async-recursion = "1.1.1"
 zstd = "0.13.3"
@@ -63,10 +63,11 @@ finl_unicode = "1.3.0"
 colored = "3.0.0"
 walkdir = "2.5.0"
 pdfium-render = { version ="0.8.31",  features = ["thread_safe","sync"], optional = true}
-chrono = "0.4.40"
+chrono = "0.4.41"
 utoipa = { version ="5.3.1",  features = ["preserve_order","preserve_path_order","yaml"]}
 rust-stemmers = "1.2.0"
 csv = "1.3.1"
+winapi = { version ="0.3.9",  features = ["winbase"]}
 
 [lints.rust]
 missing_docs = "warn"
