--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "0.12.26"
+version = "0.12.27"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -67,6 +67,7 @@ chrono = "0.4.41"
 utoipa = { version ="5.3.1",  features = ["preserve_order","preserve_path_order","yaml"]}
 rust-stemmers = "1.2.0"
 csv = "1.3.1"
+[target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version ="0.3.9",  features = ["winbase"]}
 
 [lints.rust]
