--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "0.13.0"
+version = "0.13.1"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -32,7 +32,7 @@ path = "src/seekstorm_server/main.rs"
 crossbeam-channel = "0.5.15"
 ctrlc = "3.4.7"
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.142"
+serde_json = "1.0.143"
 tokio = { version = "1.47.1", features = ["full"] }
 base64 = "0.22.1"
 num-format = "0.4.4"
@@ -44,7 +44,7 @@ num-derive = "0.4.2"
 num-traits = "0.2.19"
 regex = "1.11.1"
 lazy_static = "1.5.0"
-hyper = { version = "1.6.0", features = ["full","server"] }
+hyper = { version = "1.7.0", features = ["full","server"] }
 hyper-util = { version ="0.1.16",  features = ["server","tokio","http1","http2"]}
 http-body-util = "0.1.2"
 url = "2.5.4"
@@ -52,17 +52,17 @@ sha2 = "0.10.9"
 itertools = "0.14.0"
 async-recursion = "1.1.1"
 zstd = "0.13.3"
-rayon = "1.10.0"
+rayon = "1.11.0"
 aho-corasick = "1.1.3"
 smallvec = "1.15.1"
-memmap2 = "0.9.7"
+memmap2 = "0.9.8"
 regex-syntax = "0.8.5"
-indexmap = { version = "2.10.0", features = ["serde"]}
+indexmap = { version = "2.11.0", features = ["serde"]}
 unicode-normalization = "0.1.24"
 finl_unicode = "1.3.0"
 colored = "3.0.0"
 walkdir = "2.5.0"
-pdfium-render = { version ="0.8.34",  features = ["thread_safe","sync"], optional = true}
+pdfium-render = { version ="0.8.35",  features = ["thread_safe","sync"], optional = true}
 chrono = "0.4.41"
 utoipa = { version ="5.4.0",  features = ["preserve_order","preserve_path_order","yaml"]}
 rust-stemmers = "1.2.0"
@@ -70,7 +70,7 @@ csv = "1.3.1"
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version ="0.3.9",  features = ["winbase"]}
 
-[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
+[target.'cfg(any(target_feature = "aes", target_feature = "sse2"))'.dependencies]
 gxhash = { version = "3.5.0", features = ["deterministic"]}
 
 [lints.rust]
