--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "0.14.1"
+version = "1.0.0"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -33,7 +33,7 @@ crossbeam-channel = "0.5.15"
 ctrlc = "3.5.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
-tokio = { version = "1.47.1", features = ["full"] }
+tokio = { version = "1.48.0", features = ["full"] }
 base64 = "0.22.1"
 num-format = "0.4.4"
 ahash ={ version = "0.8.12", features = ["serde"]}
@@ -46,8 +46,8 @@ regex = "1.12.2"
 lazy_static = "1.5.0"
 hyper = { version = "1.7.0", features = ["full","server"] }
 hyper-util = { version ="0.1.17",  features = ["server","tokio","http1","http2"]}
-http-body-util = "0.1.2"
-url = "2.5.4"
+http-body-util = "0.1.3"
+url = "2.5.7"
 sha2 = "0.10.9"
 itertools = "0.14.0"
 async-recursion = "1.1.1"
@@ -55,9 +55,9 @@ zstd = "0.13.3"
 rayon = "1.11.0"
 aho-corasick = "1.1.3"
 smallvec = "1.15.1"
-memmap2 = "0.9.8"
+memmap2 = "0.9.9"
 regex-syntax = "0.8.8"
-indexmap = { version = "2.11.4", features = ["serde"]}
+indexmap = { version = "2.12.0", features = ["serde"]}
 unicode-normalization = "0.1.24"
 finl_unicode = "1.3.0"
 colored = "3.0.0"
@@ -65,8 +65,9 @@ walkdir = "2.5.0"
 pdfium-render = { version ="0.8.35",  features = ["thread_safe","sync"], optional = true}
 chrono = "0.4.42"
 utoipa = { version ="5.4.0",  features = ["preserve_order","preserve_path_order","yaml"]}
+num_cpus = "1.17.0"
 rust-stemmers = "1.2.0"
-csv = "1.3.1"
+csv = "1.4.0"
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version ="0.3.9",  features = ["winbase"]}
 
@@ -92,4 +93,3 @@ strip = "debuginfo"
 [package.metadata.docs.rs]
 rustc-args = ["-C", "target-cpu=native"]
 rustdoc-args = ["-C", "target-cpu=native"]
-
