--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "1.0.0"
+version = "1.1.0"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -22,7 +22,6 @@ pdf = ["pdfium-render"]
 [lib]
 name = "seekstorm"
 path = "src/seekstorm/lib.rs"
-doctest = false
 
 [[bin]]
 name = "seekstorm_server"
@@ -44,8 +43,8 @@ num-derive = "0.4.2"
 num-traits = "0.2.19"
 regex = "1.12.2"
 lazy_static = "1.5.0"
-hyper = { version = "1.7.0", features = ["full","server"] }
-hyper-util = { version ="0.1.17",  features = ["server","tokio","http1","http2"]}
+hyper = { version = "1.8.1", features = ["full","server"] }
+hyper-util = { version ="0.1.18",  features = ["server","tokio","http1","http2"]}
 http-body-util = "0.1.3"
 url = "2.5.7"
 sha2 = "0.10.9"
@@ -57,7 +56,7 @@ aho-corasick = "1.1.4"
 smallvec = "1.15.1"
 memmap2 = "0.9.9"
 regex-syntax = "0.8.8"
-indexmap = { version = "2.12.0", features = ["serde"]}
+indexmap = { version = "2.12.1", features = ["serde"]}
 unicode-normalization = "0.1.25"
 finl_unicode = "1.4.0"
 colored = "3.0.0"
@@ -68,6 +67,8 @@ utoipa = { version ="5.4.0",  features = ["preserve_order","preserve_path_order"
 num_cpus = "1.17.0"
 rust-stemmers = "1.2.0"
 csv = "1.4.0"
+symspell_rs = "6.8.2"
+tokio-test = "0.4.4"
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version ="0.3.9",  features = ["winbase"]}
 
