--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "1.1.3"
+version = "1.2.0"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -31,8 +31,8 @@ path = "src/seekstorm_server/main.rs"
 crossbeam-channel = "0.5.15"
 ctrlc = "3.5.1"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.147"
-tokio = { version = "1.48.0", features = ["full"] }
+serde_json = "1.0.149"
+tokio = { version = "1.49.0", features = ["full"] }
 base64 = "0.22.1"
 num-format = "0.4.4"
 ahash ={ version = "0.8.12", features = ["serde"]}
@@ -46,7 +46,7 @@ lazy_static = "1.5.0"
 hyper = { version = "1.8.1", features = ["full","server"] }
 hyper-util = { version ="0.1.19",  features = ["server","tokio","http1","http2"]}
 http-body-util = "0.1.3"
-url = "2.5.7"
+url = "2.5.8"
 sha2 = "0.10.9"
 itertools = "0.14.0"
 async-recursion = "1.1.1"
@@ -56,7 +56,7 @@ aho-corasick = "1.1.4"
 smallvec = "1.15.1"
 memmap2 = "0.9.9"
 regex-syntax = "0.8.8"
-indexmap = { version = "2.12.1", features = ["serde"]}
+indexmap = { version = "2.13.0", features = ["serde"]}
 unicode-normalization = "0.1.25"
 finl_unicode = "1.4.0"
 colored = "3.0.0"
@@ -67,7 +67,7 @@ utoipa = { version ="5.4.0",  features = ["preserve_order","preserve_path_order"
 num_cpus = "1.17.0"
 rust-stemmers = "1.2.0"
 csv = "1.4.0"
-symspell_rs = "6.8.3"
+symspell_complete_rs = "0.0.1"
 tokio-test = "0.4.4"
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version ="0.3.9",  features = ["winbase"]}
