--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "1.2.5"
+version = "2.0.0"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -72,7 +72,7 @@ tokio-test = "0.4.4"
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version ="0.3.9",  features = ["winbase"]}
 
-[target.'cfg(any(target_feature = "aes", target_feature = "sse2"))'.dependencies]
+[target.'cfg(all(target_feature = "aes", target_feature = "sse2"))'.dependencies]
 gxhash = { version = "3.5.0", features = ["deterministic"]}
 
 [lints.rust]
