--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seekstorm"
-version = "2.1.0"
+version = "2.2.0"
 authors = ["Wolf Garbe <wolf.garbe@seekstorm.com>"]
 license = "Apache-2.0"
 categories = ["database-implementations", "data-structures"]
@@ -31,7 +31,7 @@ path = "src/seekstorm_server/main.rs"
 crossbeam-channel = "0.5.15"
 ctrlc = "3.5.1"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.149"
+serde_json = { version = "1.0.149", features = ["preserve_order"] }
 tokio = { version = "1.49.0", features = ["full"] }
 base64 = "0.22.1"
 num-format = "0.4.4"
@@ -63,12 +63,14 @@ colored = "3.1.1"
 walkdir = "2.5.0"
 pdfium-render = { version ="0.8.37",  features = ["thread_safe","sync"], optional = true}
 chrono = "0.4.43"
-utoipa = { version ="5.4.0",  features = ["preserve_order","preserve_path_order","yaml"]}
+utoipa = { version ="5.4.0",  features = ["preserve_order","preserve_path_order","yaml","indexmap"]}
 num_cpus = "1.17.0"
 rust-stemmers = "1.2.0"
 csv = "1.4.0"
 symspell_complete_rs = "0.0.2"
 tokio-test = "0.4.4"
+snap = "1.1.1"
+lz4_flex = "0.12.0"
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version ="0.3.9",  features = ["winbase"]}
 
